Correct overlapping annotations and improve usability (#1885)
* Add ids to all annotation types

* Add slight offsetting of overlapping asides

* Move footer to bottom of DOM to facilitate keyboard navigation

* Use a much simpler mechanism

--- a/web/static/as_printable_html/reader-view.css
+++ b/web/static/as_printable_html/reader-view.css
@@ -1,87 +1,99 @@
-
 /* Styling that applies only to the screen-based reader view */
 @media screen, pagedjs-ignore {
+  main {
+    margin: 5vh 0;
+    box-sizing: border-box;
+  }
+  /* Lay out frontmatter based on whether this is the first chapter */
+  .casebook-metadata:not([data-paginator-page="1"]) .headnote {
+    display: none;
+  }
 
+  article p,
+  article div {
+    margin: 1rem 0;
+  }
+  main > article {
+    background-color: white;
+    padding: 5vh 5vw 10vh 5vw;
+    margin: 0 15vw 10vw 15vw;
+  }
+
+  aside.authors-note {
+    float: right;
+    clear: both;
+    border-radius: 5px;
+    margin-right: -20vw;
+    margin-bottom: 10px;
+    background: white;
+    border: 1px solid lightgray;
+    padding: 1rem;
+    width: 15vw;
+    transition: transform 0.1s ease-in;
+  }
+
+  mark.note-mark {
+    text-decoration: underline;
+    text-decoration-style: dotted;
+    text-decoration-color: lightgrey;
+    text-underline-offset: 5px;
+    background: none;
+  }
+  mark.note-mark:is(:hover, :focus) {
+    background: var(--highlight-background-color);
+  }
+  mark.note-mark:is(:hover, :focus) + aside {
+    background: var(--highlight-background-color);
+    z-index: 99;
+    border: 1px solid black;
+    transform: translateX(-10px);
+  }
+  aside.authors-note:is(:hover, :focus) {
+    background: var(--highlight-background-color);
+    z-index: 99;
+    border: 1px solid black;
+    transform: translateX(-10px);
+  }
+  mark.note-mark:has(+ aside:is(:hover, :focus)) {
+    background: var(--highlight-background-color);
+  }
+  a.footnote-generated {
+    display: none;
+  }
+  .node-heading {
+    display: block;
+    font-size: 10px;
+    width: 13vw;
+    margin-left: -20vw;
+    margin-top: -2rem;
+    text-align: right;
+  }
+  .node-heading.depth-1 {
+    top: 5vh;
+  }
+  .node-heading.depth-2 {
+    top: 10vh;
+  }
+  .node-heading.depth-3 {
+    top: 15vh;
+  }
+  .node-heading.depth-4 {
+    top: 20vh;
+  }
+  @media (max-width: 552px) {
     main {
-      margin: 5vh 0;
-      display: grid;
-      grid-template-areas: "left center right";
-      grid-template-columns: 15vw 65vw 15vw;
+      margin: 0 auto;
+      grid-template-areas: center;
+      grid-template-columns: 1fr;
     }
-    /* Lay out frontmatter based on whether this is the first chapter */
-    .casebook-metadata:not([data-paginator-page="1"]) .headnote {
+    header.screen-only {
+      margin-bottom: 2rem;
+    }
+    header.screen-only p {
+      margin: 0 0 0 1rem;
+    }
+    footer nav button.print-preview {
       display: none;
-    }
-
-    article p, article div {
-      margin: 1rem 0;
-    }
-    main > article {
-      background-color: white;
-      padding: 5vh 5vw 10vh 5vw;
-      grid-area: center;
-    }
-    main > .left {
-      height: auto;
-      grid-area: left;
-    }
-    main > .right {
-      height: auto;
-      grid-area: right;
-    }
-    aside.authors-note {
-      position: absolute;
-      right: 2vw;
-      background: white;
-      border: 1px solid lightgray;
-      padding: 1rem;
-      width: 15vw;
-    }
-    mark.note-mark {
-      text-decoration: underline;
-      text-decoration-style: dotted;
-      text-decoration-color: lightgrey;
-      text-underline-offset: 5px;
-      background: none;
-    }
-    a.footnote-generated {
-      display: none;
-    }
-    .node-heading {
-      display: block;
-      font-size: 10px;
-      width: 13vw;
-      margin-left: -20vw;
-      margin-top: -2rem;
-      text-align: right;
-    }
-    .node-heading.depth-1 {
-      top: 5vh;
-    }
-    .node-heading.depth-2 {
-      top: 10vh;
-    }
-    .node-heading.depth-3 {
-      top: 15vh;
-    }
-    .node-heading.depth-4 {
-      top: 20vh;
-    }
-    @media (max-width: 552px) {
-
-      main {
-        margin: 0 auto;
-        grid-template-areas: center;
-        grid-template-columns: 1fr;
-      }
-      header.screen-only {
-        margin-bottom: 2rem;
-      }
-      header.screen-only p {
-        margin: 0 0 0 1rem;
-      }
-      footer nav button.print-preview {
-        display: none;
-      }
     }
   }
+}
